darts/base/resources/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: darts
  labels:
    istio-injection: enabled
    organization: spacecamp-delta4
    product: darts
    name: darts
