darts/base/resources/auth-policy-patch.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: intra-namespace-authpolicy
spec:
  rules:
  - from:
    - source:
        namespaces: [ "darts" ]
